<resources>
    <string name="app_name">Bottle Recycle App</string>
    <string name="title_home">Home</string>
    <string name="title_recycle_map">Recycle Map</string>
    <string name="title_personal_data">Personal Data</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_QrCode">QR Code</string>
    <string name="station_address">Station Address</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">緯度</string>
</resources>