<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.fcu.android.bottlerecycleapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_recycle_map"
        android:name="com.fcu.android.bottlerecycleapp.ui.recycle_map.RecycleMapFragment"
        android:label="@string/title_recycle_map"
        tools:layout="@layout/fragment_recycle_map" />

    <fragment
        android:id="@+id/navigation_PersonalData"
        android:name="com.fcu.android.bottlerecycleapp.ui.notifications.PersonalDataFragment"
        android:label="@string/title_personal_data"
        tools:layout="@layout/fragment_personal_data" />

    <fragment
        android:id="@+id/navigation_qrcode"
        android:name="com.fcu.android.bottlerecycleapp.ui.qrcode.QrCodeFragment"
        android:label="@string/title_QrCode"
        tools:layout="@layout/fragment_qr_code" />
</navigation>